homelab/firefly/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: firefly
  annotations:
    argocd.argoproj.io/sync-wave: "0"
