homelab/firefly/deployment-importer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-importer
  namespace: firefly
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app: firefly-importer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefly-importer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: firefly-importer
    spec:
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 30
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 30
      containers:
        - name: firefly-importer
          image: fireflyiii/data-importer:latest@sha256:4e2cbcb0d95c34850534a3772f1732c00f6412077db33b1863703a1b628bdc12
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi

          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
            failureThreshold: 3
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            failureThreshold: 3
            initialDelaySeconds: 10
