homelab/firefly/service-importer.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-importer
  namespace: firefly
  labels:
    app: firefly-importer
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: firefly-importer
