homelab/firefly/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly
  namespace: firefly
  labels:
    app: firefly
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: firefly
