homelab/firefly/ingress-importer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-importer
  namespace: firefly
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - firefly-importer.k8s.hu.ls
      secretName: wildcard-k8s-hu-ls-tls
  rules:
    - host: firefly-importer.k8s.hu.ls
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: firefly-importer
                port:
                  number: 80
